Добавили футер, разобрали работу тегов для выделения текста и ссылок

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,19 @@
     <main>
         <section>
             <h2>О себе</h2>
-            <p>Меня зовут Владислав, я frontend-разработчик.</p>
-            <p>В свободное время читаю техническую литературу</p>
+            <p>Меня зовут Владислав, я <b>frontend-разработчик</b>, мои контакты можете посмотреть <a href="#my-contacts">тут</a>.</p>
+            <p>В <u>свободное</u> время читаю <i>техническую</i> литературу</p>
+            <p>Моя любимая цитата: <em><mark>То, что мы не оправдали ваши ожидания — это не наши проблемы. Это ваши проблемы.</mark> - <small>Аршавин</small></em></p>
         </section>
 
         <section>
             <h2>Навыки:</h2>
             
             <ol>
-                <li>HTML5 — семантическая разметка</li>
-                <li>CSS3 — стилизация и анимации</li>
-                <li>JavaScript — базовые знания</li>
-                <li>Git — контроль версий</li>
+                <li><strong>HTML5</strong> — семантическая разметка</li>
+                <li><strong>CSS3</strong> — стилизация и анимации</li>
+                <li><strong>JavaScript</strong> — базовые знания</li>
+                <li><strong>Git</strong> — контроль версий</li>
                 <li>Работа в команде</li>
             </ol>
 
@@ -42,6 +43,33 @@
                 <li>...</li>
             </ul>
         </section>
+        <section>
+            <h3>Мои проекты:</h3>
+            <ol>
+                <li>
+                    <a href="https://github.com/Vlad116/LogistLog" target="_blank"><strong>Платформа для логистики</strong></a>
+                    <p>Это мой учебный проект много лет назад</p>
+                </li>
+                <li>
+                    <a href="https://github.com/Vlad116/EQueue"><strong>Платформа для управления очередями</strong></a>
+                    <p>Это мой учебный проект много лет назад</p>
+                </li>
+            </ol>
+        </section>
+        <footer>
+            <section id="my-contacts">
+                <h3>Контакты:</h3>
+                <ol>
+                    <li>
+                        <a href="mailto:ivanov-ivan@example.com">ivanov-ivan@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+79171234323">+7 (917) 123-43-23</a>
+                    </li>
+                </ol>
+            </section>
+            <p>&copy; 2026 Владислав Алексеев. Все права защищены.</p>
+        </footer>
     </main>
 </body>
 </html>
