Добавили таблицу достижений и свою фотографию

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 
     <main>
         <section>
+            <img src="https://avatars.githubusercontent.com/u/32329117?v=4&size=64" alt="Фото Алексеев Владислав">
             <h2>О себе</h2>
             <p>Меня зовут Владислав, я <b>frontend-разработчик</b>, мои контакты можете посмотреть <a href="#my-contacts">тут</a>.</p>
             <p>В <u>свободное</u> время читаю <i>техническую</i> литературу</p>
@@ -56,20 +57,41 @@
                 </li>
             </ol>
         </section>
-        <footer>
-            <section id="my-contacts">
-                <h3>Контакты:</h3>
-                <ol>
-                    <li>
-                        <a href="mailto:ivanov-ivan@example.com">ivanov-ivan@example.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+79171234323">+7 (917) 123-43-23</a>
-                    </li>
-                </ol>
-            </section>
-            <p>&copy; 2026 Владислав Алексеев. Все права защищены.</p>
-        </footer>
+        <section>
+            <table>
+                <caption><h4>Мои достижения</h4></caption>
+                <thead>
+                    <tr>
+                        <th colspan="2">Название достижения</th>
+                        <th>год</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Закончил бакалавриат</td>
+                        <td>2021</td>
+                    </tr>
+                    <tr>
+                        <td>Выйграл школьную олимпиаду</td>
+                        <td>2012</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
+    <footer>
+        <section id="my-contacts">
+            <h3>Контакты:</h3>
+            <ol>
+                <li>
+                    <a href="mailto:ivanov-ivan@example.com">ivanov-ivan@example.com</a>
+                </li>
+                <li>
+                    <a href="tel:+79171234323">+7 (917) 123-43-23</a>
+                </li>
+            </ol>
+        </section>
+        <p>&copy; 2026 Владислав Алексеев. Все права защищены.</p>
+    </footer>
 </body>
 </html>
